--- a/src/app/pages/camara/camara.component.html
+++ b/src/app/pages/camara/camara.component.html
@@ -5,24 +5,29 @@
 
 <main class="main">
 
-<!-- 
-    // Stream video via webcam
-    <div class="video-wrap">
-        <video id="video" playsinline autoplay></video>
+    <!-- Stream video via webcam -->
+    <div class="stream__wrapper">
+        <video #video class="stream__video" playsinline autoplay></video>
     </div>
+    <!-- Webcam video snapshot -->
+    <canvas #canvas class="stream__canvas"></canvas>
 
-    // Trigger canvas web API
-    <div class="controller">
-        <button id="snap">Capture</button>
+    <div class="main__icons">
+        <svg class="main__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+            <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
+        </svg>
+        <button 
+            class="main__circle stream__btn"
+            (click)="takeScreenshot()">
+
+            <svg class="main__svg main__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z"/>
+            </svg>
+        </button>
+        <svg class="main__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
+            <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+        </svg>
     </div>
-
-    // Webcam video snapshot
-    <canvas id="canvas" width="640" height="480"></canvas> -->
-
-
-
-    <i class="main__icono foto far fa-images"></i>
-    <i class="main__arrow fas fa-angle-up"></i>
-    <div class="main__circulo"></div>
-    <i class="main__icono camera fas fa-camera"></i>
 </main>
