--- a/src/assets/reset/_variables.scss
+++ b/src/assets/reset/_variables.scss
@@ -7,7 +7,7 @@
     --c-header    : #f6f6f6;
     --c-main-text : #3d3d5c;
     --c-sec-text  : #808080;
-    --c-accent    : #007cff;
+    --c-accent    : #3c98fc;
     --c-outgoing  : #dcf7c8;
     --c-incoming  : #f9f9f9;
     --c-notif     : #ff0000;
