--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
-$color-base     : #2f2f2f;
-$color-inverso  : invert($color-base);
-$font-ppal 		: normal normal normal 100% / 140% Fakt Pro Medium, 'Roboto', sans-serif;
-
-*{margin:0;padding:0;border:0;box-sizing: border-box;vertical-align: baseline;}
-img{display: block;	max-width: 100%;width: 100%;object-fit: cover;object-position: center;}
-a{display: flex;text-decoration: none;color:inherit}
-video{width: 100%;display: flex;object-fit: cover;object-position: center center;}
-audio{ display: flex; }
-p a { display: inline; }
-li{list-style-type: none;}
-table , tr , td {border-collapse: collapse;border-spacing: 0;}
-html{scroll-behavior: smooth;}
-
-body{ font:$font-ppal; font-smooth: always;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale; overflow: hidden; color: $color-base; background-color: #efeff4}
-h1 , h2, h3 , h4 , h5, h6{ color:inherit; font-weight:inherit; font-size: inherit;}
-form{ input , textarea , select { font:$font-ppal; hyphens: auto; background-color: transparent; appearance: none; display: block; } }
-
-@mixin flexible($a, $b, $c, $d, $e ){
-	display: flex;
-	flex-flow: $a $b;
-	justify-content: $c;
-	align-items: $d;
-	align-content: $e;
-}
-
-// overflow: hidden al body.
+@import '_variables', '_reset', '_mixins';
