--- a/src/app/pages/camara/camara.component.scss
+++ b/src/app/pages/camara/camara.component.scss
@@ -1,47 +1,51 @@
-@import 'mixins.scss', 'keyframes.scss', 'variables.scss';
+@import '_mixins.scss', '_variables.scss';
 
 .main {
-
     width: 100%;
-    height: 100%;
-    color: white;
-    background-color: black;
-    
-    video {
+    height: 100vh;
+    color: var(--white);
+    background-color: var(--black);
+    overflow: hidden;
+
+    &__icons {
+        position: fixed;
+        left: 0;
+        bottom: calc(10% - 1.5em);
         width: 100%;
-        height: calc(100vh - 180px);
+        padding: 1.5em 2em;
+        @include flex( row, nowrap, space-between, center );
     }
+    &__svg {
+        width: 2em;
+        height: 2em;
 
-    &__icono {
-        position: fixed;
-        top: 81%;
-        font-size: 2em;
-        opacity: .8;
+        &--arrow {
+            position: absolute;
+            top: -5%;
+            left: calc(50% - 1em);
+        }
     }
-    .foto {
-        left: 7%;  
-    }
-
-    &__arrow {
-        position: fixed;
-        top: 69%;
-        left: 42%;
-        font-size: 6em;
-        opacity: .8;
-    }
-
-    &__circulo {
-        position: fixed;
-        top: 79%;
-        left: calc(50% - 35px);
-        width: 70px;
-        height: 70px;
+    &__circle {
+        width: 4.4em;
+        height: 4.4em;
         border-radius: 50%;
-        border: 5px solid white;
-    }
-    .camera {
-        right: 7%;
+        border: 5px solid var(--white);
+        cursor: pointer;
     }
 
-
+    .stream {
+        &__video {
+            width: 100%;
+            height: 100vh;
+        }
+        &__canvas {
+            position: fixed;
+            top: calc(50% - 140px);
+            left: calc(50% - 220px);
+            width: 440px;
+            height: 280px;
+            border-radius: 10px;
+            transition: opacity 0.5s ease;
+        }
+    }
 }
