--- a/src/app/pages/configuracion/configuracion.component.html
+++ b/src/app/pages/configuracion/configuracion.component.html
@@ -21,7 +21,9 @@
                 <div 
                     class="list__number"
                     *ngIf="item.num">{{ item.num }}</div>
-                <div class="list__arrow fas fa-angle-right"></div>
+                <svg class="list__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z"/>
+                </svg>
             </div>
         </li>
     </ul>
