--- a/src/app/pages/configuracion/configuracion.component.scss
+++ b/src/app/pages/configuracion/configuracion.component.scss
@@ -1,25 +1,25 @@
-@import 'mixins.scss', 'keyframes.scss';
+@import '_mixins.scss', '_keyframes.scss';
 
 .main {
     width: 100%;
 }
 .profile {
     padding: 1em;
-    background-color: white;
-    border-bottom: 1px solid lightgray;
-    @include flexible ( row, nowrap, flex-end, center, initial );
+    background-color: var(--white);
+    border-bottom: 1px solid var(--c-border);
+    @include flex ( row, nowrap, flex-end, center );
     
     &__column{
 
         &:nth-of-type(1){
             width: 20%;
-            margin: 0 0 .5em;
+            margin: 0 0 0.5em;
         }
         &:nth-of-type(2){ width: 60%; }
         &:nth-of-type(3) { width: 20%; }
     }
     &__img {
-        width:60px;
+        width: 60px;
         height: 60px;
         border-radius: 50%;
     }
@@ -27,111 +27,88 @@
         font-weight: 600;
     }
     &__h3 {
-        color: gray;
-    }
-    &__icon {
-        padding: .5em;
-        color: #51a5e6;
-        background-color: gray;
-        border-radius: 50%;
+        color: var(--c-sec-text);
     }
 }
 .list {
     margin: 2em 0;
 
     &__item {
-        padding: .5em 1em;
-        background-color: white;
-        border-top: 1px solid lightgray;
-        @include flexible ( row, nowrap, space-between, center, initial );
+        padding: 0.5em 1em;
+        background-color: var(--white);
+        border-top: 1px solid var(--c-border);
+        @include flex ( row, nowrap, space-between, center );
 
         &:nth-of-type(2),
         &:nth-of-type(6),
         &:nth-of-type(8) {
-            border-bottom:1px solid lightgrey;
+            border-bottom: 1px solid var(--c-border);
         }
-    
-        &:nth-of-type(1) .list__icon {
-            background-color: #ffc527;
-        }
-        &:nth-of-type(2) {  
+        &:nth-of-type(2),
+        &:nth-of-type(6) {  
             margin: 0 0 2em;
-            .list__icon {
-                background-color: #07ada0;
-            }
         }
-        &:nth-of-type(3) .list__icon {
-            background-color: #397aff;
-        }
-        &:nth-of-type(4) .list__icon {
-            background-color: #4bd763;
-        }
-        &:nth-of-type(5) .list__icon {
-            background-color: #ff3b2f;
-        }
-        &:nth-of-type(6) {
-            margin: 0 0 2em;
 
-            .list__icon {
-                background-color: #4bd763;
+        $colors: (
+            1: #ffc527,
+            2: #07ada0,
+            3: #397aff,
+            4: #4bd763,
+            5: #ff3b2f,
+            6: #4bd763,
+            7: #4ba0ff,
+            8: #ff2c55,
+        );
+        @each $number, $color in $colors {
+            &:nth-child(#{$number}) .list__icon{
+                background-color: $color;
             }
-        }
-        &:nth-of-type(7) .list__icon {
-            background-color: #4ba0ff;
-        }
-        &:nth-of-type(8) .list__icon {
-            background-color: #ff2c55;
         }
     }
-
     &__h4 {
         width: calc( 80% - 27px );
-        margin: 0 .5em;
+        margin: 0 0.5em;
         font-size: 1.1em;
     }
-    
     &__column {
         width: 20%;
-        @include flexible ( row, nowrap, flex-end, center, initial );
+        @include flex ( row, nowrap, flex-end, center );
     }
-
     &__icon {
         width: 27px;
         height: 27px;
-        color: white;
+        color: var(--white);
         border-radius: 5px;
-        @include flexible ( row, nowrap, center, center, initial );
+        @include flex ( row, nowrap, center, center );
     }
-
     &__number {
-        width: 20px;
-        height: 20px;
-        margin: 0 .5em 0 0;
-        padding: .8em;
-        color: white;
-        background-color: #2f8ff2;
+        width: 1em;
+        height: 1em;
+        padding: 0.8em;
+        color: var(--white);
+        background-color: var(--c-accent);
         border-radius: 50%;
-        @include flexible( row , nowrap , center , center , initial );
+        @include flex( row , nowrap , center , center  );
     }
-    &__arrow {
-        font-size: 1.3em;
-        color: lightgray;
-        margin-left: .5em;
+    &__svg {
+        width: 1.3em;
+        height: 1.3em;
+        color: var(--c-sec-text);
     }
 }
-
 .copy {
     text-align: center;
+
     &__span{
-        font-size: .8em;
+        font-size: 0.8em;
         line-height: 1em;
-        color: grey;
+        color: var(--c-sec-text);
     }
     &__h5{
         line-height: 1em;
-        letter-spacing: .2em;
+        letter-spacing: 0.2em;
         text-transform: uppercase;
-        font-size: .8em;
+        font-size: 0.8em;
         font-weight: bold;
     }
 }
